--- a/bin/setting/setting.ini
+++ b/bin/setting/setting.ini
@@ -1,8 +1,10 @@
 [CONFIG]
-PathMediaList=F:/music
-PlayIndex=0
+PathMediaList=D:/BaiduNetdiskDownload/\x97f3\x4e50
+PlayIndex=7
 Word=true
-LocationX=741
-LocationY=459
+LocationX=1236
+LocationY=472
 PlayMode=0
-Volume=57
+Volume=80
+ActionMain=true
+TransparentMouse=false
