--- a/bin/setting/setting.ini
+++ b/bin/setting/setting.ini
@@ -1,10 +1,10 @@
 [CONFIG]
 PathMediaList=D:/BaiduNetdiskDownload/\x97f3\x4e50
-PlayIndex=7
-Word=true
-LocationX=1236
-LocationY=472
+PlayIndex=0
+Word=false
+LocationX=929
+LocationY=200
 PlayMode=0
-Volume=80
+Volume=0
 ActionMain=true
 TransparentMouse=false
